Changes between Oolite 1.74.1 and Oolite 1.74.2:

* Stopped player from selecting invalid jump destination during jump countdown.
* Switching to custom views now allowed in a consistent way.
* Weapon repeat rate is now per-weapon.
* Exhaust plume now resets after hyperspace jumps/scripted teleporting.
* Fixed overlapping system confusion when loading games and searching for
  systems.
* Fixed occasional "bleached"-looking planets on system info screen.
* SystemInfo.systemsInRange() can now be called on a specific SystemInfo
  object, instead of always applying to the current system.
* Improved default speech synthesis voice (not Mac OS X).
* New JavaScript event: shipAttackedOther() (inverse of shipBeingAttacked(),
  called immediately after shipBeingAttacked()).
* If a script removes a piece of equipment in the equipmentDamaged() event
  handler, no "equipment damaged" message is generated.
* Ship.removeEquipment() now works on damaged equipment.
* New shipinfo key: station_roll.
* Fixed some cases where AIs could break group handling.
* Shader errors detected in the link phase (generally, problems involving
  state shared between the vertex and fragment shader) are now reported
  properly.

-------------------------------------------------------------------------------

Changes between Oolite 1.74 and Oolite 1.74.1:

* Scripts can once again award and check for trumbles, and the standard trumble
  mission once again works. (Limitation: scripts cannot increase the number of
  trumbles by awarding more. This will be fixed in 1.75.)
* The nova mission once again awards the appropriate reward on a successful
  outcome.
* No more "Witchspace engine malfunction" message when entering a post-nova
  system.
* When docked at a secondary station, the default selection on the game menu
  screen is "Game Options" rather than "Begin New Game".
* Fixed annoying audio latency when playing first sound under Mac OS X.